ventana principal main conectado + JUnitPerf tests de performance